<resources>
    <string name="app_name">EscapeRoom</string>
    <string name="submit">Submit</string>
    <string name="enter_answer">Enter answer</string>
    <string name="anagram">anagram</string>
    <string name="light">LIGHT</string>
    <string name="lock">lock</string>
    <string name="unlock">unlock</string>
    <string name="next_room">NEXT ROOM</string>
    <string name="start">START CHALLENGE</string>
</resources>